add block words