@@ -1,17 +1,17 @@
 package com.example.demo.service;
 
-import com.example.demo.domain.Bounds;
-import com.example.demo.domain.Type;
-import com.example.demo.domain.Word;
-import com.example.demo.domain.WordCount;
+import com.example.demo.domain.*;
+import com.example.demo.repository.BlockWordRepository;
 import com.example.demo.repository.TypeRepository;
 import com.example.demo.repository.WordCountRepository;
 import com.example.demo.repository.WordRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -24,10 +24,26 @@ public class KeywordsService {
     private final TypeRepository typeRepository;
     private final WordRepository wordRepository;
 
-    public static double k = 1.5;
+    private final BlockWordRepository blockWordRepository;
+
+    //public static double k = 1.5;
+
+    private boolean needBlock = false;
+
+    private final Comparator<WordCount> wordCountComparator = Comparator.comparing(WordCount::getCount);
 
     @Transactional
     public void update() {
+
+        if (needBlock) {
+            Set<BlockWord> wordCounts = wordCountRepository.findAll(Sort.by(Sort.Order.desc("count"))).stream()
+                    .limit(100)
+                    .map(wordCount -> {
+                        return new BlockWord(wordCount.getWord());
+                    }).collect(Collectors.toSet());
+            blockWordRepository.saveAll(wordCounts);
+        }
+        Set<String> blockWords = blockWordRepository.findAll().stream().map(BlockWord::getWord).collect(Collectors.toSet());
         List<Type> types = typeRepository.findAll();
         Set<String> allKeywords = types.stream()
                 .flatMap(type ->
@@ -38,20 +54,20 @@ public class KeywordsService {
         types.forEach(
                 type -> {
                     List<WordCount> countList = wordCountRepository.findAllByTypeNameOrderByCountAsc(type.getTypeName());
-                    double gameCount = type.getGames().size() * 0.8;
+                    double gameCount = type.getGames().size() * 0.7;
                     if (countList.isEmpty()) return;
 
-                    List<WordCount> list = countList.stream().parallel()
-                            .filter(wordCount -> wordCount.getInGames() > gameCount)
-                            .collect(Collectors.toList());
+                    List<WordCount> list = countList.stream()
+                            .filter(wordCount -> wordCount.getInGames() > gameCount).toList();
 
                     Bounds bounds = findBounds(list);
-                    System.out.println(bounds + "---------------------------------------------------------------------------------------------------------------------");
+                  //  System.out.println(bounds + "---------------------------------------------------------------------------------------------------------------------");
 
-                    list.stream().parallel()
+                    list.stream()
                             .filter(wordCount -> bounds.inBounds(wordCount.getCount()))
                             .map(WordCount::getWord)
                             .filter(word -> !allKeywords.contains(word))
+                            .filter(word -> !blockWords.contains(word))
                             .forEach(newKeyword -> {
                                 newKeyWords.add(new Word(newKeyword, type));
                                 allKeywords.add(newKeyword);
@@ -82,8 +98,8 @@ public class KeywordsService {
         Double Q1 = findQ1(countList);
         Double Q3 = findQ3(countList);
         Double IQR = Q3 - Q1;
-        Double lower = Q1 - (IQR * k);
-        Double upper = Q3 + (IQR * k);
+        //Double lower = Q1 - (IQR * k);
+        // Double upper = Q3 + (IQR * k);
         return new Bounds(Q1, Q3);
 
     }
